// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Tabs renders default tabs 1`] = `
<div
  className="slds-tabs_default"
>
  <ul
    className="slds-tabs_default__nav"
    role="tablist"
  >
    <li
      className="slds-tabs_default__item slds-is-active"
      role="presentation"
      title="Item One"
    >
      <a
        aria-controls="tab-default-1"
        aria-selected={true}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-1__item"
        role="tab"
        tabIndex={0}
      >
        Item One
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Two"
    >
      <a
        aria-controls="tab-default-2"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-2__item"
        role="tab"
        tabIndex={-1}
      >
        Item Two
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Three"
    >
      <a
        aria-controls="tab-default-3"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-3__item"
        role="tab"
        tabIndex={-1}
      >
        Item Three
      </a>
    </li>
  </ul>
  <div
    aria-labelledby="tab-default-1__item"
    className="slds-tabs_default__content slds-show"
    id="tab-default-1"
    role="tabpanel"
  >
    Item One Content
  </div>
  <div
    aria-labelledby="tab-default-2__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-2"
    role="tabpanel"
  >
    Item Two Content
  </div>
  <div
    aria-labelledby="tab-default-3__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-3"
    role="tabpanel"
  >
    Item Three Content
  </div>
</div>
`;

exports[`Default Tabs renders default tabs with nested scoped tabs 1`] = `
<div
  className="slds-tabs_default"
>
  <ul
    className="slds-tabs_default__nav"
    role="tablist"
  >
    <li
      className="slds-tabs_default__item slds-is-active"
      role="presentation"
      title="Item One"
    >
      <a
        aria-controls="tab-default-1"
        aria-selected={true}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-1__item"
        role="tab"
        tabIndex={0}
      >
        Item One
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Two"
    >
      <a
        aria-controls="tab-default-2"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-2__item"
        role="tab"
        tabIndex={-1}
      >
        Item Two
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Three"
    >
      <a
        aria-controls="tab-default-3"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-3__item"
        role="tab"
        tabIndex={-1}
      >
        Item Three
      </a>
    </li>
  </ul>
  <div
    aria-labelledby="tab-default-1__item"
    className="slds-tabs_default__content slds-show"
    id="tab-default-1"
    role="tabpanel"
  >
    <div
      className="slds-tabs_scoped"
    >
      <ul
        className="slds-tabs_scoped__nav"
        role="tablist"
      >
        <li
          className="slds-tabs_scoped__item slds-is-active"
          role="presentation"
          title="Item One"
        >
          <a
            aria-controls="tab-scoped-1"
            aria-selected={true}
            className="slds-tabs_scoped__link"
            href="javascript:void(0);"
            id="tab-scoped-1__item"
            role="tab"
            tabIndex={0}
          >
            Item One
          </a>
        </li>
        <li
          className="slds-tabs_scoped__item"
          role="presentation"
          title="Item Two"
        >
          <a
            aria-controls="tab-scoped-2"
            aria-selected={false}
            className="slds-tabs_scoped__link"
            href="javascript:void(0);"
            id="tab-scoped-2__item"
            role="tab"
            tabIndex={-1}
          >
            Item Two
          </a>
        </li>
        <li
          className="slds-tabs_scoped__item"
          role="presentation"
          title="Item Three"
        >
          <a
            aria-controls="tab-scoped-3"
            aria-selected={false}
            className="slds-tabs_scoped__link"
            href="javascript:void(0);"
            id="tab-scoped-3__item"
            role="tab"
            tabIndex={-1}
          >
            Item Three
          </a>
        </li>
      </ul>
      <div
        aria-labelledby="tab-scoped-1__item"
        className="slds-tabs_scoped__content slds-show"
        id="tab-scoped-1"
        role="tabpanel"
      >
        Item One Content
      </div>
      <div
        aria-labelledby="tab-scoped-2__item"
        className="slds-tabs_scoped__content slds-hide"
        id="tab-scoped-2"
        role="tabpanel"
      >
        Item Two Content
      </div>
      <div
        aria-labelledby="tab-scoped-3__item"
        className="slds-tabs_scoped__content slds-hide"
        id="tab-scoped-3"
        role="tabpanel"
      >
        Item Three Content
      </div>
    </div>
  </div>
  <div
    aria-labelledby="tab-default-2__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-2"
    role="tabpanel"
  >
    Item Two Content
  </div>
  <div
    aria-labelledby="tab-default-3__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-3"
    role="tabpanel"
  >
    Item Three Content
  </div>
</div>
`;

exports[`Default Tabs renders default tabs with overflowing tab items 1`] = `
<div
  className="demo-only"
  style={
    Object {
      "height": "12rem",
    }
  }
>
  <div
    className="slds-tabs_default"
  >
    <ul
      className="slds-tabs_default__nav"
      role="tablist"
    >
      <li
        className="slds-tabs_default__item slds-is-active"
        role="presentation"
        title="Item One"
      >
        <a
          aria-controls="tab-default-1"
          aria-selected={true}
          className="slds-tabs_default__link"
          href="javascript:void(0);"
          id="tab-default-1__item"
          role="tab"
          tabIndex={0}
        >
          Item One
        </a>
      </li>
      <li
        className="slds-tabs_default__item"
        role="presentation"
        title="Item Two"
      >
        <a
          aria-controls="tab-default-2"
          aria-selected={false}
          className="slds-tabs_default__link"
          href="javascript:void(0);"
          id="tab-default-2__item"
          role="tab"
          tabIndex={-1}
        >
          Item Two
        </a>
      </li>
      <li
        className="slds-tabs_default__item"
        role="presentation"
        title="Item Three"
      >
        <a
          aria-controls="tab-default-3"
          aria-selected={false}
          className="slds-tabs_default__link"
          href="javascript:void(0);"
          id="tab-default-3__item"
          role="tab"
          tabIndex={-1}
        >
          Item Three
        </a>
      </li>
      <li
        className="slds-tabs_default__item"
        role="presentation"
        title="Item Four"
      >
        <a
          aria-controls="tab-default-4"
          aria-selected={false}
          className="slds-tabs_default__link"
          href="javascript:void(0);"
          id="tab-default-4__item"
          role="tab"
          tabIndex={-1}
        >
          Item Four
        </a>
      </li>
      <li
        className="slds-tabs_default__item"
        role="presentation"
        title="Item Five"
      >
        <a
          aria-controls="tab-default-5"
          aria-selected={false}
          className="slds-tabs_default__link"
          href="javascript:void(0);"
          id="tab-default-5__item"
          role="tab"
          tabIndex={-1}
        >
          Item Five
        </a>
      </li>
      <li
        className="slds-tabs_default__item"
        role="presentation"
        title="Item Six"
      >
        <a
          aria-controls="tab-default-6"
          aria-selected={false}
          className="slds-tabs_default__link"
          href="javascript:void(0);"
          id="tab-default-6__item"
          role="tab"
          tabIndex={-1}
        >
          Item Six
        </a>
      </li>
      <li
        className="slds-tabs_default__item"
        role="presentation"
        title="Item Seven"
      >
        <a
          aria-controls="tab-default-7"
          aria-selected={false}
          className="slds-tabs_default__link"
          href="javascript:void(0);"
          id="tab-default-7__item"
          role="tab"
          tabIndex={-1}
        >
          Item Seven
        </a>
      </li>
      <li
        className="slds-tabs_default__item slds-tabs_default__overflow-button"
        role="presentation"
        title="More Tabs"
      >
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
        >
          <button
            aria-haspopup={true}
            className="slds-button"
            disabled={undefined}
          >
            More
            <svg
              aria-hidden={true}
              className="slds-button__icon slds-button__icon_x-small slds-button__icon_right"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
              />
            </svg>
          </button>
          <div
            className="slds-dropdown slds-dropdown_right"
            style={undefined}
          >
            <ul
              aria-label={undefined}
              className="slds-dropdown__list slds-dropdown_length-with-icon-10"
              role="menu"
            >
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  aria-checked={undefined}
                  href="javascript:void(0);"
                  role="menuitem"
                  tabIndex="-1"
                >
                  <span
                    className="slds-truncate"
                    title="Accounts"
                  >
                    <span
                      className="slds-media slds-media_center"
                    >
                      <span
                        className="slds-media__figure"
                      >
                        <span
                          className="slds-icon_container slds-icon-standard-account"
                          title="Description of icon when needed"
                        >
                          <svg
                            aria-hidden={true}
                            className="slds-icon slds-icon_small"
                          >
                            <use
                              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                          <span
                            className="slds-assistive-text"
                          >
                            Description of icon when needed
                          </span>
                        </span>
                      </span>
                      <span
                        className="slds-media__body"
                      >
                        Accounts
                      </span>
                    </span>
                  </span>
                </a>
              </li>
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  aria-checked={undefined}
                  href="javascript:void(0);"
                  role="menuitem"
                  tabIndex="-1"
                >
                  <span
                    className="slds-truncate"
                    title="Approvals"
                  >
                    <span
                      className="slds-media slds-media_center"
                    >
                      <span
                        className="slds-media__figure"
                      >
                        <span
                          className="slds-icon_container slds-icon-standard-approval"
                          title="Description of icon when needed"
                        >
                          <svg
                            aria-hidden={true}
                            className="slds-icon slds-icon_small"
                          >
                            <use
                              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#approval"
                            />
                          </svg>
                          <span
                            className="slds-assistive-text"
                          >
                            Description of icon when needed
                          </span>
                        </span>
                      </span>
                      <span
                        className="slds-media__body"
                      >
                        Approvals
                      </span>
                    </span>
                  </span>
                </a>
              </li>
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  aria-checked={undefined}
                  href="javascript:void(0);"
                  role="menuitem"
                  tabIndex="-1"
                >
                  <span
                    className="slds-truncate"
                    title="Lead"
                  >
                    <span
                      className="slds-media slds-media_center"
                    >
                      <span
                        className="slds-media__figure"
                      >
                        <span
                          className="slds-icon_container slds-icon-standard-lead"
                          title="Description of icon when needed"
                        >
                          <svg
                            aria-hidden={true}
                            className="slds-icon slds-icon_small"
                          >
                            <use
                              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#lead"
                            />
                          </svg>
                          <span
                            className="slds-assistive-text"
                          >
                            Description of icon when needed
                          </span>
                        </span>
                      </span>
                      <span
                        className="slds-media__body"
                      >
                        Leads
                      </span>
                    </span>
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </li>
    </ul>
    <div
      aria-labelledby="tab-default-1__item"
      className="slds-tabs_default__content slds-show"
      id="tab-default-1"
      role="tabpanel"
    >
      Item One Content
    </div>
    <div
      aria-labelledby="tab-default-2__item"
      className="slds-tabs_default__content slds-hide"
      id="tab-default-2"
      role="tabpanel"
    >
      Item Two Content
    </div>
    <div
      aria-labelledby="tab-default-3__item"
      className="slds-tabs_default__content slds-hide"
      id="tab-default-3"
      role="tabpanel"
    >
      Item Three Content
    </div>
    <div
      aria-labelledby="tab-default-4__item"
      className="slds-tabs_default__content slds-hide"
      id="tab-default-4"
      role="tabpanel"
    >
      <h2>
        Item Four Content
      </h2>
    </div>
    <div
      aria-labelledby="tab-default-5__item"
      className="slds-tabs_default__content slds-hide"
      id="tab-default-5"
      role="tabpanel"
    >
      <h2>
        Item Five Content
      </h2>
    </div>
    <div
      aria-labelledby="tab-default-6__item"
      className="slds-tabs_default__content slds-hide"
      id="tab-default-6"
      role="tabpanel"
    >
      <h2>
        Item Six Content
      </h2>
    </div>
    <div
      aria-labelledby="tab-default-7__item"
      className="slds-tabs_default__content slds-hide"
      id="tab-default-7"
      role="tabpanel"
    >
      <h2>
        Item Seven Content
      </h2>
    </div>
  </div>
</div>
`;

exports[`Default Tabs renders large sized default tabs 1`] = `
<div
  className="slds-tabs_default slds-tabs_large"
>
  <ul
    className="slds-tabs_default__nav"
    role="tablist"
  >
    <li
      className="slds-tabs_default__item slds-is-active"
      role="presentation"
      title="Item One"
    >
      <a
        aria-controls="tab-default-1"
        aria-selected={true}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-1__item"
        role="tab"
        tabIndex={0}
      >
        Item One
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Two"
    >
      <a
        aria-controls="tab-default-2"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-2__item"
        role="tab"
        tabIndex={-1}
      >
        Item Two
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Three"
    >
      <a
        aria-controls="tab-default-3"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-3__item"
        role="tab"
        tabIndex={-1}
      >
        Item Three
      </a>
    </li>
  </ul>
  <div
    aria-labelledby="tab-default-1__item"
    className="slds-tabs_default__content slds-show"
    id="tab-default-1"
    role="tabpanel"
  >
    Item One Content
  </div>
  <div
    aria-labelledby="tab-default-2__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-2"
    role="tabpanel"
  >
    Item Two Content
  </div>
  <div
    aria-labelledby="tab-default-3__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-3"
    role="tabpanel"
  >
    Item Three Content
  </div>
</div>
`;

exports[`Default Tabs renders medium sized default tabs 1`] = `
<div
  className="slds-tabs_default slds-tabs_medium"
>
  <ul
    className="slds-tabs_default__nav"
    role="tablist"
  >
    <li
      className="slds-tabs_default__item slds-is-active"
      role="presentation"
      title="Item One"
    >
      <a
        aria-controls="tab-default-1"
        aria-selected={true}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-1__item"
        role="tab"
        tabIndex={0}
      >
        Item One
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Two"
    >
      <a
        aria-controls="tab-default-2"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-2__item"
        role="tab"
        tabIndex={-1}
      >
        Item Two
      </a>
    </li>
    <li
      className="slds-tabs_default__item"
      role="presentation"
      title="Item Three"
    >
      <a
        aria-controls="tab-default-3"
        aria-selected={false}
        className="slds-tabs_default__link"
        href="javascript:void(0);"
        id="tab-default-3__item"
        role="tab"
        tabIndex={-1}
      >
        Item Three
      </a>
    </li>
  </ul>
  <div
    aria-labelledby="tab-default-1__item"
    className="slds-tabs_default__content slds-show"
    id="tab-default-1"
    role="tabpanel"
  >
    Item One Content
  </div>
  <div
    aria-labelledby="tab-default-2__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-2"
    role="tabpanel"
  >
    Item Two Content
  </div>
  <div
    aria-labelledby="tab-default-3__item"
    className="slds-tabs_default__content slds-hide"
    id="tab-default-3"
    role="tabpanel"
  >
    Item Three Content
  </div>
</div>
`;

exports[`Subtabs renders subtab with notification and dirty 1`] = `
<div
  className="slds-tabs_default slds-sub-tabs"
>
  <ul
    className="slds-tabs_default__nav"
    role="tablist"
  >
    <li
      className="slds-tabs_default__item slds-sub-tabs__item slds-grid slds-grid_vertical-align-center slds-active"
      role="presentation"
    >
      <a
        aria-controls="subtab-tabpanel-01"
        aria-selected="true"
        className="slds-tabs_default__link slds-p-horizontal_xx-small"
        href="javascript:void(0);"
        id="subtab-tabitem-01"
        role="tab"
        tabIndex="0"
        title="00071938"
      >
        <span
          className="slds-indicator-container"
        />
        <div
          className="slds-icon_container"
          title="Case"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case
            :
          </span>
        </div>
        <span
          className="slds-truncate"
          title="00071938"
        >
          00071938
        </span>
      </a>
      <div
        className="slds-col_bump-left slds-p-left_none slds-p-right_none"
      >
        <button
          aria-haspopup={undefined}
          className="slds-button slds-button_icon slds-button_icon-container slds-button_icon-x-small"
          id={undefined}
          tabIndex="0"
          title="Close 00071938"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close 00071938
          </span>
        </button>
      </div>
    </li>
    <li
      className="slds-tabs_default__item slds-sub-tabs__item slds-grid slds-grid_vertical-align-center slds-has-notification slds-is-unsaved"
      role="presentation"
    >
      <a
        aria-controls="subtab-tabpanel-02"
        aria-selected="false"
        className="slds-tabs_default__link slds-p-horizontal_xx-small"
        href="javascript:void(0);"
        id="subtab-tabitem-02"
        role="tab"
        tabIndex="-1"
        title="Chat - Customer"
      >
        <span
          className="slds-indicator-container"
        >
          <abbr
            aria-label="Tab Not Saved"
            className="slds-indicator_unsaved"
            title="Tab Not Saved"
          >
            *
          </abbr>
          <span
            aria-label="New Activity"
            className="slds-indicator_unread"
            role="alert"
            title="New Activity"
          >
            <span
              className="slds-assistive-text"
            >
              New activity in Tab: Chat - Customer
            </span>
          </span>
        </span>
        <div
          className="slds-icon_container"
          title="Live Chat"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#live_chat"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Live Chat
            :
          </span>
        </div>
        <span
          className="slds-truncate"
          title="Chat - Customer"
        >
          Chat - Customer
        </span>
      </a>
      <div
        className="slds-col_bump-left slds-p-left_none slds-p-right_none"
      >
        <button
          aria-haspopup={undefined}
          className="slds-button slds-button_icon slds-button_icon-container slds-button_icon-x-small"
          id={undefined}
          tabIndex="-1"
          title="Close Chat - Customer"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close Chat - Customer
          </span>
        </button>
      </div>
    </li>
  </ul>
  <div
    aria-labelledby="subtab-tabitem-01"
    className="slds-tabs_default__content slds-show"
    id="subtab-tabpanel-01"
    role="tabpanel"
  >
    Item One Content
  </div>
  <div
    aria-labelledby="subtab-tabitem-02"
    className="slds-tabs_default__content slds-hide"
    id="subtab-tabpanel-02"
    role="tabpanel"
  >
    Item Two Content
  </div>
</div>
`;
